   keine automatische Statusänderung. In den Berichten kann der Status
   angezeigt werden und es kann danach gefiltert werden.
 - Informationen über Positionen in Belegberichten können in einer eigenen
   Spalte angezeigt werden. Es wird zuerst nur die erste Position angezeigt,
   die Information weiterer Positionen lässt sich aus- und einklappen.

2022-05-20 - Release 3.6.1

Größere neue Features:

Mittelgroße neue Features:

 - Neuer Workflow Artikel->Lieferantenaufrag. Hierbei wird der gerade
   bearbeitete Artikel gespeichert und die Lieferantenauftrags-Maske
   geöffnet. Der Artikel ist dann in der Eingabezeile vorbelegt.
   Sofern genau ein Lieferant beim Artikel hinterlegt ist, so wird
   auch dieser im Lieferantenauftrag vorbelegt.
 - In Angebot und Auftrag gibt es einen neuen Reiter für Telefonnotizen.
   Hier können Notizen zum Beleg erfasst werden. Nach diesen lässt sich im
   Bericht auch filtern.
 - Neuer Filter im Auftragsbericht nach "Volltext". Hierzu werden die Texte in
   den Feldern Bemerkungen, interne Bemerkungen, Versandort, Transportmittel,
   Vorgangsbezeichnung, Auftragsnummer, Angebotsnummer und
   Bestellnummer des Kunden durchsucht,
   Zudem werden Dokumente und Anhänge zu Aufträgen im DMS durchsucht.
   Dazu wird ein Hintgergrund-Job eingerichtet (täglich 03:20 Uhr), der die
   Texte aus den Dokumenten extrahiert. Im Moment werden Texte aus Dokumenten
   mit den mime-Typen 'application/pdf', 'text/html' und 'text/plain'
   ausgelesen.

Kleinere neue Features und Detailverbesserungen:

 - Die Protokollierung von E-Mails in interne Bemerkungen ist deaktiviert,
   falls der Mandant sowieso das E-Mail-Journal aktiviert hat.
 - Steuerschlüssel 94, 19 und 18 neu angelegt und um Reverse Charge erweitert.
   D.h. bei diesen Steuerschlüsseln
   kann in einem netto verbuchten Kreditorenbeleg gleichzeitig Vor- und
   Mehrwertsteuer verbucht werden. Die Steuerbuchung wird in einer separat
   verknüpften Dialogbuchung gemacht.