@@ -694,11 +694,13 @@ $self->{texts} = {
   'Close Books up to'           => 'Die Bücher abschließen bis zum',
   'Close Details'               => 'Details schließen',
   'Close Flash'                 => 'Schließen',
+  'Close Quotations'            => 'Angebote/Preisanfragen schließen',
   'Close SEPA exports'          => 'SEPA-Export abschließen',
   'Close Window'                => 'Fenster Schließen',
   'Close window'                => 'Fenster schließen',
   'Closed'                      => 'Geschlossen',
   'Closing Balance'             => 'Abschlußsaldo',
+  'Closing the selected quotations failed: #1' => 'Das Schließen der Angebote/Preisanfragen schlug fehl: #1',
   'Collective Orders only work for orders from one customer!' => 'Sammelaufträge funktionieren nur für Aufträge von einem Kunden!',
   'Column name'                 => 'Spaltenname',
   'Comma'                       => 'Komma',
@@ -3763,6 +3765,7 @@ $self->{texts} = {
   'The selected database is still configured for client "#1". If you delete the database that client will stop working until you re-configure it. Do you still want to delete the database?' => 'Die auswählte Datenbank ist noch für Mandant "#1" konfiguriert. Wenn Sie die Datenbank löschen, wird der Mandanten nicht mehr funktionieren, bis er anders konfiguriert wurde. Möchten Sie die Datenbank trotzdem löschen?',
   'The selected exports have been closed.' => 'Die ausgewählten Exporte wurden abgeschlossen.',
   'The selected exports have been undone.' => 'Die ausgwählten Exporte wurden rückgängig gemacht.',
+  'The selected quotations where closed.' => 'Die ausgewählten Angebote/Preisanfragen wurden geschlossen.',
   'The selected warehouse does not exist.' => 'Das ausgewählte Lager existiert nicht.',
   'The selected warehouse is empty, or no stocked items where found that match the filter settings.' => 'Das ausgewählte Lager ist leer, oder in ihm wurden keine zu den Sucheinstellungen passenden eingelagerten Artikel gefunden.',
   'The session has expired. Please log in again.' => 'Die Sitzung ist abgelaufen. Bitte melden Sie sich erneut an.',
