@@ -694,11 +694,13 @@ $self->{texts} = {
   'Close Books up to'           => '',
   'Close Details'               => '',
   'Close Flash'                 => '',
+  'Close Quotations'            => '',
   'Close SEPA exports'          => '',
   'Close Window'                => '',
   'Close window'                => '',
   'Closed'                      => '',
   'Closing Balance'             => '',
+  'Closing the selected quotations failed: #1' => '',
   'Collective Orders only work for orders from one customer!' => '',
   'Column name'                 => '',
   'Comma'                       => '',
@@ -3762,6 +3764,7 @@ $self->{texts} = {
   'The selected database is still configured for client "#1". If you delete the database that client will stop working until you re-configure it. Do you still want to delete the database?' => '',
   'The selected exports have been closed.' => '',
   'The selected exports have been undone.' => '',
+  'The selected quotations where closed.' => '',
   'The selected warehouse does not exist.' => '',
   'The selected warehouse is empty, or no stocked items where found that match the filter settings.' => '',
   'The session has expired. Please log in again.' => '',
