@@ -2,6 +2,8 @@
 [%- USE HTML %]
 <h1>[% 'Your TODO list' | $T8 %]</h1>
 
+ [%- INCLUDE 'common/flash.html' %]
+
  [%- IF !todo_list %]
  <p>
   [% 'There are no items on your TODO list at the moment.' | $T8 %]
@@ -12,4 +14,3 @@
  [%- todo_list %]
 
  [%- END %]
-
