@@ -22,6 +22,11 @@ Mittelgroße neue Features:
    Spalte angezeigt werden. Es wird zuerst nur die erste Position angezeigt,
    die Information weiterer Positionen lässt sich aus- und einklappen.
 
+Kleinere neue Features und Detailverbesserungen:
+
+ - Angebote/Preisanfragen können aus der Aufgabenliste (auch auf dem
+   Startbildschrim) heraus geschlossen werden.
+
 2022-05-20 - Release 3.6.1
 
 Größere neue Features:
